		in the download area, if it's not 0644 it will be corrected.

	mbsetup:
		In file transfers edit, removed switches for batch and bidirect
		protocols, added a switch for internal protocols.
		New internal protocols are automatic added and the external
		protocols are disabled. Some fields of the internal protocols
		are protected.
		In file areas, free downloads is now default for new areas.

	lang:
		Changed width of prompt 261.
		Added prompt 28.
		Removed leading spaces of prompt 151.
		Removed prompts 259 and 276.

	script:
		Modified rundoor.sh so that it uses two different dosemu
		configuration files, one for virtual modem and one without.
		See the manual doors.html.
		In the editor script modified the joe header so that it will
		work with the new terminal i/o.

	examples:
		Fixed logo display.
		Fixed Spanish txtfiles to leave out an old support bbs.


v0.70.0		06-Jun-2004 - 26-Oct-2004.

        upgrade:
                If you run a version older then 0.60.0, first upgrade to 0.60.0
                If you run a version older then 0.60.0, first upgrade to 0.60.0
                (That was twice).
                Don't forget to backup /opt/mbse and all fle areas!

                Check if /opt/mbse/var/msgs is empty before using this version.
                Make sure that /opt/mbse/queue is empty, then close the
                bbs with "mbstat close wait".
                Kill mbtask, "kill `/sbin/pidof mbtask` might work.
		Now you may do the upgrade with "make install" as root. This
		order is important because the files database moves to a new
                location (~/var/fdb). Some other directories move too.
		Now you may start the bbs again.

                Start "mbsetup", enter 1, global setup, leave and save".
                Run "mbfile check" and then "mbfile index". This fixes the
                thumbnails if supported by your system.
                Update all maintenance scripts to change the semafore directory